# Archway

./: CMakeLists.txt  README.md  board_spec.json
include/: address_space.hpp  arm.hpp  armv8.hpp  board.hpp  core.hpp  cpu.hpp  logger.hpp  register.hpp
include/cpu/: address_space.hpp  arm_functions.hpp  core.hpp  registers.hpp
include/cpu/parsing/: binary_decoder.hpp  encodings.hpp  opcode.hpp
include/devices/: device.hpp  memory.hpp  uart.hpp
include/ui/: window.hpp
libs/glad/include/glad/: glad.h
libs/glad/source/: glad.c
source/: address_space.cpp  board.cpp  core.cpp  cpu.cpp  logger.cpp  main.cpp
source/cpu/: core.cpp  instruction_handlers.cpp
source/devices/: memory.cpp  uart.cpp
source/ui/: window.cpp
